--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Fall2021_Java1111111111111111111111111</name>
+	<name>Fall2021_Java</name>
 	<comment></comment>
 	<projects>
 	</projects>
